# paysats

./: .gitignore  Dockerfile  Paysats Online description.txt  README.md  pyproject.toml  run_dev_server.bat
app/: db.py  lightningaddress.py  main.py  nip05.py  utils.py
app/static/: index.html
app/templates/: 404.html  faq.html  index.html  index2.html  user.html
bip/: BIPXXX.MD
