[tool.poetry]
name = "paysats"
version = "0.1.0"
description = ""
authors = ["aviv57 <aviv57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
